update signin form

--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,26 @@ body {
   font-family: 'Courier New', Courier, monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(89deg, #FF5EDF 0%, #04CBDE 100%);
+  background-image: url("./images/background2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    background-image: url("./images/mobile_photo2.jpg");
+  }
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 button {
   cursor: pointer;
+  color: white;
+}
+
+p {
+  font-weight: bold;
 }
